add some code to database (testing syntax)

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <textarea class="form-control" id="pesan" rows="3"></textarea>
                       </div>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3" onclick="submitPesan()">Submit</button>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3" onclick="submitForm()">Submit</button>
                       </div>
                 </form>
             </div>
