adding some text

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   </form>
                 </div>
                 <div class="col-lg-12 fs-6 mt-5">
-                  <p class="p-catatan">Catatan: Web Portofolio ini hanya baru dibuat dari sisi Frontendnya saja dan belum dibuat ke sisi Backendnya. Jadi fitur form "Contact Me" ini masih belum berfungsi sebagaimana mestinya</p>
+                  <p class="p-catatan">Catatan: Web Portofolio ini hanya baru dibuat dari sisi Frontendnya saja dan belum dibuat ke sisi Backendnya. Jadi fitur form "Contact Me" ini masih belum berfungsi sebagaimana mestinya. Nantikan update selanjutnya :)</p>
                 </div>
           </div>
         </div>
