update resume and certificates

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <p class="lead text-center">Lulusan SMK Teknik Komputer Jaringan dan memiliki sertifikat IT Support dari Coursera serta memiliki sertifikat Web Development Frontend dari Coding Studio. Memiliki Kemampuan Networking, System Administration, IT Security, HTML, CSS, Javascript (Fundamental).</p>
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mb-lg-3">
-              <a href="#" type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2" download="">Resume</a>
-              <a href="assets/Certificates-Seinki-AL.zip" type="button" class="btn btn-outline-secondary btn-lg px-4" download="">Certificates</a>
+              <a href="assets/documents/Curriculum Vitae.pdf" type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2" download="">Resume</a>
+              <a href="assets/documents/Certificates-Seinki-AL.zip" type="button" class="btn btn-outline-secondary btn-lg px-4" download="">Certificates</a>
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
