update fixed top navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- navbar -->
-<header class="sticky-lg-top">
+<header class="fixed-element">
     <nav class="px-3 py-2 text-bg-dark shadow p-3 mb-5">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
