adding experience card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="px-3 py-2 text-bg-dark shadow p-3 mb-5">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto fs-3 fw-bold text-white text-decoration-none">
+            <a href="#home" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto fs-3 fw-bold text-white text-decoration-none">
                 <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg> -->
                 Seinki A.L
             </a>
@@ -75,7 +75,7 @@
             <h3 class="display-lg-2 text-center fs-1 fw-bold lh-1 py-3" id="seinki">SEINKI ANNA LESMANA</h3>
             <p class="lead text-center">Lulusan SMK Teknik Komputer Jaringan dan memiliki sertifikat IT Support dari Coursera serta memiliki sertifikat Web Development Frontend dari Coding Studio. Memiliki Kemampuan Networking, System Administration, IT Security, HTML, CSS, Javascript (Fundamental).</p>
             </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mb-lg-3">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mb-lg-3 rounded-pill">
               <a href="assets/documents/Curriculum Vitae.pdf" type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2" download="">Resume</a>
               <a href="assets/documents/Certificates-Seinki-AL.zip" type="button" class="btn btn-outline-secondary btn-lg px-4" download="">Certificates</a>
             </div>
@@ -113,10 +113,62 @@
 </section>
 <!-- about end -->
 
+<!-- card experience -->
+<section id="experience">
+  <div class="container pb-lg-5">
+    <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-0">
+      <h1 class="display-5 fw-semibold pb-2 border-bottom text-center">Experience</h1>
+      <!-- card 1 -->
+      <div class="col-lg-6 pt-lg-5" id="card1">
+        <div class="card">
+          <h5 class="card-header">Jati Kopi</h5>
+          <div class="card-body">
+            <div class="row-lg">
+              <div class="col-lg d-flex">
+                <i><img src="assets/img/waiter.svg" alt="waiter" style="width: 50px;"></i>
+                <h5 class="card-title pt-lg-1 ps-lg-2">Waiter <br> (Maret 2020 - Desember 2021)
+                </h5>
+              </div>
+            </div>
+            <p class="card-text">
+              <li>Menata meja dengan rapi, memastikan, dan membersihkan kelengkapan alat makan.</li>
+              <li>Melayani, memberikan rekomendasi menu, mencatat, memastikan, dan menyajikan menu makanan kepada pelanggan.</li>
+              <li>Membersihkan area meja yang telah dipakai pelanggan, mengevaluasi kinerja bersama terutama ketika ada komplain sebelumnya.</li>
+            </p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+          </div>
+        </div>
+      </div>
+      <!-- card 2 -->
+      <div class="col-lg-6 pt-lg-5" id="card2">
+        <div class="card">
+          <h5 class="card-header">Ninja Xpress</h5>
+          <div class="card-body">
+            <div class="row-lg">
+              <div class="col-lg d-flex">
+                <i><img src="assets/img/courier.svg" alt="courier" style="width: 50px;"></i>
+                <h5 class="card-title pt-lg-1 ps-lg-2">Warehouse Staff Freelance <br> (Desember 2021 - Masih Bekerja)
+                </h5>
+              </div>
+            </div>
+            <p class="card-text">
+              <li>Memasukkan paket (per karung) dari berbagai macam truk dari mitra ke dalam gudang.</li>
+              <li>Mendata dan menginput paket ke dalam karung, menggunakan tools dan aplikasi scanning khusus milik perusahaan.</li>
+              <li>Memastikan semua paket sudah di input, selanjutnya mengirimkan paket (per karung) menggunakan truk tertentu (tergantung jenis paket) ke kota tujuan.</li>
+            </p>
+            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- card experience end -->
+
 <!-- features -->
 <section id="project">
     <div class="container px-4 py-5" id="custom-cards">
-        <h2 class="pb-2 border-bottom">My Projects</h2>
+        <h1 class="pb-2 border-bottom text-center">My Projects</h1>
         <!-- project 1 -->
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
           <div class="col">
@@ -198,7 +250,7 @@
     <div class="container px-4 py-5">
         <div class="row pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
             <div class="border-bottom text-center">
-                <h2>Contact Me</h2>
+                <h1>Contact Me</h1>
             </div>
             <div class="col-lg-6">
                 <form class="pt-lg-5">
