update experience card for responsive

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="row-lg">
               <div class="col-lg d-flex">
                 <i><img src="assets/img/waiter.svg" alt="waiter" style="width: 50px;"></i>
-                <h5 class="card-title pt-lg-1 ps-lg-2">Waiter <br> (Maret 2020 - Desember 2021)
+                <h5 class="card-title pt-lg-1 ps-lg-2 h5-card">Waiter <br> (Maret 2020 - Desember 2021)
                 </h5>
               </div>
             </div>
@@ -147,7 +147,7 @@
             <div class="row-lg">
               <div class="col-lg d-flex">
                 <i><img src="assets/img/courier.svg" alt="courier" style="width: 50px;"></i>
-                <h5 class="card-title pt-lg-1 ps-lg-2">Warehouse Staff Freelance <br> (Desember 2021 - Masih Bekerja)
+                <h5 class="card-title pt-lg-1 ps-lg-2 h5-card">Warehouse Staff Freelance <br> (Desember 2021 - Masih Bekerja)
                 </h5>
               </div>
             </div>
