update img-home border and all responsive for 1000px

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- navbar -->
-<header class="sticky-lg-top" id="navbars">
+<header class="sticky-md-top" id="navbars">
     <nav class="px-3 py-2 text-bg-dark shadow p-3 mb-5">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -80,8 +80,8 @@
               <a href="assets/documents/Certificates-Seinki-AL.zip" type="button" class="btn btn-outline-secondary btn-lg px-4" download="">Certificates</a>
             </div>
           </div>
-          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="assets/img/thinking.jpg" alt="" width="480">
+          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg div-img-home">
+              <img class="img-home" src="assets/img/thinking.jpg" alt="" width="480">
           </div>
         </div>
     </div>
