update blog title

--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
 
 <!-- iframe blogger -->
 <section id="blog">
-  <div class="container pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
+  <div class="container px-4 py-5 pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
     <div class="row pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
       <div class="col-md-12">
         <div class="border-bottom text-center">
-          <h1>Artikel Dari Blog</h1>
+          <h1>My Article</h1>
         </div>
         <iframe src="https://seinkiannalesmana.blogspot.com/" height="1000px" width="1000px" class="pt-md-5 iframe-blog"></iframe>
       </div>
