--- a/index.html
+++ b/index.html
@@ -286,18 +286,18 @@
 <!-- contact me end -->
 
 <!-- iframe blogger -->
-<section id="blog">
-  <div class="container px-4 py-5 pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
-    <div class="row pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
-      <div class="col-md-12">
+<!-- <section id="blog">
+  <div class="container ps-lg-4 py-lg-4 d-flex justify-content-lg-center align-items-lg-center">
+    <div class="row pt-lg-5 pb-lg-5 d-flex justify-content-lg-center align-items-lg-center">
+      <div class="col-lg-12 border-1 bg-danger ps-lg-5">
         <div class="border-bottom text-center">
           <h1>My Article</h1>
         </div>
-        <iframe src="https://seinkiannalesmana.blogspot.com/" height="1000px" width="1000px" class="pt-md-5 iframe-blog"></iframe>
+        <iframe src="https://seinkiannalesmana.blogspot.com/" height="1000px" width="1000px" class="ps-lg-5 iframe-blog"></iframe>
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- iframe blogger end -->
 
 <!-- footer -->
