update responsive footer

--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
 <!-- iframe blogger end -->
 
 <!-- footer -->
-<div class="container-fluid p-5">
+<div class="container-lg-fluid p-lg-5">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-6 d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
           <!-- <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg> -->
         </a>
-        <span class="mb-3 mb-md-0 text-muted shadow">&copy; 2023 Created and developed with love by <a href="mailto:seinkiart123@gmail.com" class="text-decoration-none footer-seinki">Seinki Anna Lesmana</a></span>
+        <span class="mb-3 mb-md-0 text-muted footer-text">&copy; 2023 Created and developed with love by <a href="mailto:seinkiart123@gmail.com" class="text-decoration-none">Seinki Anna Lesmana</a></span>
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <!-- whatsapp -->
