--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="shortcut icon" href="assets/img/logo/seinki-AL-system-dark-logo-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,13 +14,14 @@
 <header class="sticky-md-top" id="navbars">
     <nav class="px-3 py-2 text-bg-dark shadow p-3 mb-5">
         <div class="container p-auto">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="#home" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto fs-3 fw-bold text-white text-decoration-none">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="#home" class="navbar-brand d-flex align-items-center my-2 my-lg-0 me-lg-auto fs-3 fw-bold text-white text-decoration-none">
+              <img src="assets/img/logo/seinki-AL-system-dark-logo-rmv-bg.png" alt="seinki-logo" width="150" height="50" class="img-navbar" id="img-navbar1">
                 <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg> -->
-                Seinki A.L
+                <!-- Seinki A.L -->
             </a>
 
-            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small" id="ul-navbar">
                 <li>
                 <a href="#home" class="nav-link text-white">
                     <!-- <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"/></svg> -->
