update heroes header and some text fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="shortcut icon" href="assets/img/logo/seinki-AL-system-dark-logo-circle-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo/seinki-AL-system-dg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -80,11 +80,12 @@
     <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h3 class="display-lg-2 text-center fs-1 fw-bold lh-1 py-3" id="seinki">SEINKI ANNA LESMANA</h3>
-            <p class="lead text-center">Lulusan SMK Teknik Komputer Jaringan dan memiliki sertifikat IT Support dari Coursera serta memiliki sertifikat Web Development Frontend dari Coding Studio. Memiliki Kemampuan Networking, System Administration, IT Security, HTML, CSS, Javascript (Fundamental).</p>
+            <h5 class="display-lg-2 fs-4 lh-1" id="hello">HI, I AM</h5>
+            <h1 class="col-lg-12 fw-bold lh-1 py-3" id="seinki">SEINKI ANNA LESMANA</h1>
+            <p class="lead desk-singkat">Lulusan SMK Teknik Komputer Jaringan dan memiliki sertifikat IT Support dari Coursera serta memiliki sertifikat Web Development Frontend dari Coding Studio. Memiliki Kemampuan Networking, System Administration, IT Security, HTML, CSS, Javascript (Fundamental).</p>
             </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4 mb-lg-3">
-              <a href="assets/documents/Curriculum Vitae.pdf" type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2 col-lg-6 rounded-pill shadow" download="">Resume</a>
+            <div class="d-grid gap-2 d-md-flex mb-4 mb-lg-3  pt-lg-2">
+              <a href="assets/documents/Curriculum Vitae.pdf" type="button" class="btn btn-outline-secondary me-md-2 col-lg-4 rounded-pill shadow" download="">Resume</a>
               <!-- <a href="assets/documents/Certificates-Seinki-AL.zip" type="button" class="btn btn-outline-secondary btn-lg px-4" download="">Certificates</a> -->
             </div>
           </div>
@@ -103,7 +104,7 @@
     <div class="px-4 py-5 my-5 text-center">
       <h1 class="display-5 fw-semibold pb-2 border-bottom">About</h1>
       <div class="col-lg-12 mx-auto">
-        <p class="lead mb-4">
+        <p class="lead mb-4 text-about">
             Saya adalah seorang lulusan SMK Teknik Komputer Jaringan yang bersertifikat IT Support dari Coursera, dan sertifikat Web Development Frontend dari Coding Studio. Berdasarkan kompetensi yang saya miliki, saya yakin dapat berkontribusi di bidang IT.
             <br> Setelah lulus dari SMK, saya memutuskan mulai bekerja di café Jati Kopi sebagai<span id="dots">...</span><span id="more"> Waiter selama kurang lebih 2 tahun. Saya juga pernah bekerja di PT Andiarta Muzizat (Ninja Xpress) sebagai Warehouse Staff Freelance kurang lebih 1 tahun dan saat ini masih bekerja di perusahaan tersebut.
             <br>
@@ -113,7 +114,7 @@
             </span>
         </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3 rounded-pill shadow" onclick="myFunction()" id="myBtn">Read More</button>
+          <button type="button" class="btn btn-outline-secondary px-4 gap-3 rounded-pill shadow" onclick="myFunction()" id="myBtn">Read More</button>
         </div>
       </div>
     </div>
@@ -133,7 +134,7 @@
           <img src="assets/documents/Coursera-IT-Support-Certificate.png" class="card-img-top" alt="IT-Support">
           <div class="card-body d-grid gap-2 justify-content-sm-center">
             <h5 class="card-title">IT Support</h5>
-            <p class="card-text">Mendapatkan sertifikat IT Support dari Coursera yang diselenggarakan oleh Yayasan Plan, INCO Acamedy Work In Tech, Rubicweb, & Google.org.</p>
+            <p class="card-text text-card">Mendapatkan sertifikat IT Support dari Coursera yang diselenggarakan oleh Yayasan Plan, INCO Acamedy Work In Tech, Rubicweb, & Google.org.</p>
             <a href="assets/documents/Coursera-IT-Support-Certificate.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
         </div>
@@ -180,7 +181,7 @@
                 </h5>
               </div>
             </div>
-            <p class="card-text">
+            <p class="card-text text-card-exp">
               <li>Menata meja dengan rapi, memastikan, dan membersihkan kelengkapan alat makan.</li>
               <li>Melayani, memberikan rekomendasi menu, mencatat, memastikan, dan menyajikan menu makanan kepada pelanggan.</li>
               <li>Membersihkan area meja yang telah dipakai pelanggan, mengevaluasi kinerja bersama terutama ketika ada komplain sebelumnya.</li>
@@ -201,7 +202,7 @@
                 </h5>
               </div>
             </div>
-            <p class="card-text">
+            <p class="card-text text-card-exp">
               <li>Memasukkan paket (per karung) dari berbagai macam truk dari mitra ke dalam gudang.</li>
               <li>Mendata dan menginput paket ke dalam karung, menggunakan tools dan aplikasi scanning khusus milik perusahaan.</li>
               <li>Memastikan semua paket sudah di input, selanjutnya mengirimkan paket (per karung) menggunakan truk tertentu (tergantung jenis paket) ke kota tujuan.</li>
@@ -317,7 +318,7 @@
                         <textarea class="form-control" id="pesan" rows="3"></textarea>
                     </div>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4 gap-3 rounded-pill shadow col-lg-4" onclick="submitForm()">Submit</button>
+                        <button type="button" class="btn btn-outline-secondary px-4 gap-3 rounded-pill shadow col-lg-4" onclick="submitForm()">Submit</button>
                     </div>
                   </form>
                 </div>
