--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="assets/img/logo/seinki-AL-system-dark-logo-circle-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- navbar -->
@@ -23,7 +26,7 @@
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small" id="ul-navbar">
                 <li>
-                <a href="#home" class="nav-link text-white">
+                <a href="#home" class="nav-link text-white navbars-hover">
                     <!-- <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"/></svg> -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house text-white d-block mx-auto mb-1" viewBox="0 0 16 16">
                         <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
@@ -32,7 +35,7 @@
                 </a>
                 </li>
                 <li>
-                <a href="#about" class="nav-link text-white">
+                <a href="#about" class="nav-link text-white navbars-hover">
                     <!-- <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"/></svg> -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-file-earmark-person text-white d-block mx-auto mb-1" viewBox="0 0 16 16">
                         <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -42,7 +45,7 @@
                 </a>
                 </li>
                 <li>
-                <a href="#project" class="nav-link text-white">
+                <a href="#project" class="nav-link text-white navbars-hover">
                     <!-- <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#grid"/></svg> -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-kanban text-white d-block mx-auto mb-1" viewBox="0 0 16 16">
                         <path d="M13.5 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-11a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h11zm-11-1a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2h-11z"/>
@@ -52,7 +55,7 @@
                 </a>
                 </li>
                 <li>
-                    <a href="#contact" class="nav-link text-white">
+                    <a href="#contact" class="nav-link text-white navbars-hover">
                     <!-- <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"/></svg> -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-rolodex d-block mx-auto mb-1" viewBox="0 0 16 16">
                         <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
@@ -62,7 +65,7 @@
                     </a>
                 </li>
                 <li>
-                  <a href="https://seinkiannalesmana.blogspot.com/" target="_blank" class="nav-link text-white">
+                  <a href="https://seinkiannalesmana.blogspot.com/" target="_blank" class="nav-link text-white navbars-hover">
                       <svg style="color: white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="text-white d-block mx-auto mb-1" viewBox="0 0 448 512"><!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. --><path d="M446.6 222.7c-1.8-8-6.8-15.4-12.5-18.5-1.8-1-13-2.2-25-2.7-20.1-.9-22.3-1.3-28.7-5-10.1-5.9-12.8-12.3-12.9-29.5-.1-33-13.8-63.7-40.9-91.3-19.3-19.7-40.9-33-65.5-40.5-5.9-1.8-19.1-2.4-63.3-2.9-69.4-.8-84.8.6-108.4 10C45.9 59.5 14.7 96.1 3.3 142.9 1.2 151.7.7 165.8.2 246.8c-.6 101.5.1 116.4 6.4 136.5 15.6 49.6 59.9 86.3 104.4 94.3 14.8 2.7 197.3 3.3 216 .8 32.5-4.4 58-17.5 81.9-41.9 17.3-17.7 28.1-36.8 35.2-62.1 4.9-17.6 4.5-142.8 2.5-151.7zm-322.1-63.6c7.8-7.9 10-8.2 58.8-8.2 43.9 0 45.4.1 51.8 3.4 9.3 4.7 13.4 11.3 13.4 21.9 0 9.5-3.8 16.2-12.3 21.6-4.6 2.9-7.3 3.1-50.3 3.3-26.5.2-47.7-.4-50.8-1.2-16.6-4.7-22.8-28.5-10.6-40.8zm191.8 199.8l-14.9 2.4-77.5.9c-68.1.8-87.3-.4-90.9-2-7.1-3.1-13.8-11.7-14.9-19.4-1.1-7.3 2.6-17.3 8.2-22.4 7.1-6.4 10.2-6.6 97.3-6.7 89.6-.1 89.1-.1 97.6 7.8 12.1 11.3 9.5 31.2-4.9 39.4z" fill="white"></path></svg>
                       Blog
                   </a>
@@ -133,7 +136,7 @@
         <div class="card shadow" style="width: 18rem;">
           <img src="assets/documents/Coursera-IT-Support-Certificate.png" class="card-img-top" alt="IT-Support">
           <div class="card-body d-grid gap-2 justify-content-sm-center">
-            <h5 class="card-title">IT Support</h5>
+            <h5 class="card-title fw-semibold">IT Support</h5>
             <p class="card-text text-card">Mendapatkan sertifikat IT Support dari Coursera yang diselenggarakan oleh Yayasan Plan, INCO Acamedy Work In Tech, Rubicweb, & Google.org.</p>
             <a href="assets/documents/Coursera-IT-Support-Certificate.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
@@ -143,7 +146,7 @@
         <div class="card shadow" style="width: 18rem;">
           <img src="assets/documents/Certificate-INCO-Academy.png" class="card-img-top" alt="INCO-Academy">
           <div class="card-body d-grid gap-2 justify-content-sm-center">
-            <h5 class="card-title">Mentoring</h5>
+            <h5 class="card-title fw-semibold">Mentoring</h5>
             <p class="card-text">Mendapatkan sertifikat mentoring selama kursus IT Support dan sertifikat kursus tambahan Junior Web Programming dari Kitakerja (Yayasan Plan).</p>
             <a href="assets/documents/Certificate-INCO-Academy.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
@@ -153,7 +156,7 @@
         <div class="card shadow" style="width: 18rem;">
           <img src="assets/documents/Certificate_Menguasai-Fundamental-Front-End-Web_Seinki-1.png" class="card-img-top" alt="Frontend-Web-Development">
           <div class="card-body d-grid gap-2 justify-content-sm-center">
-            <h5 class="card-title">Frontend Web Development</h5>
+            <h5 class="card-title fw-semibold">Frontend Web Development</h5>
             <p class="card-text pb-4">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
             <a href="assets/documents/Certificate_Menguasai-Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
@@ -219,7 +222,7 @@
 <!-- features -->
 <section id="project">
     <div class="container px-4 py-5" id="custom-cards">
-        <h1 class="pb-2 border-bottom text-center">My Projects</h1>
+        <h1 class="pb-2 border-bottom text-center fw-bold">My Projects</h1>
         <!-- project 1 -->
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
           <div class="col">
@@ -301,7 +304,7 @@
     <div class="container px-4 py-5">
         <div class="row pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
             <div class="border-bottom text-center">
-                <h1>Contact Me</h1>
+                <h1 class="fw-bold">Contact Me</h1>
             </div>
             <div class="col-lg-6">
                 <form class="pt-lg-5">
