update ui icon certificate

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h1 class="visually-hidden"></h1>
     <div class="px-4 py-5 my-5 text-center">
       <h1 class="display-5 fw-semibold pb-2 border-bottom">About</h1>
-      <div class="col-lg-12 mx-auto">
+      <div class="col-lg-12 pt-lg-4 mx-auto">
         <p class="lead mb-4 text-about">
             Saya adalah seorang lulusan SMK Teknik Komputer Jaringan yang bersertifikat IT Support dari Coursera, dan sertifikat Web Development Frontend dari Coding Studio. Berdasarkan kompetensi yang saya miliki, saya yakin dapat berkontribusi di bidang IT.
             <br> Setelah lulus dari SMK, saya memutuskan mulai bekerja di café Jati Kopi sebagai<span id="dots">...</span><span id="more"> Waiter selama kurang lebih 2 tahun. Saya juga pernah bekerja di PT Andiarta Muzizat (Ninja Xpress) sebagai Warehouse Staff Freelance kurang lebih 1 tahun dan saat ini masih bekerja di perusahaan tersebut.
@@ -131,7 +131,7 @@
     <!-- <div class="px-4 text-center">
     </div> -->
     <h1 class="display-5 fw-semibold border-bottom pb-2 text-center">Certificates</h1>
-    <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-3 ps-4" id="row-card">
+    <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-5 ps-4" id="row-card">
       <div class="col-lg-4" id="certificate-card1">
         <div class="card shadow" style="width: 18rem;">
           <img src="assets/documents/Coursera-IT-Support-Certificate.png" class="card-img-top" alt="IT-Support">
@@ -145,8 +145,10 @@
       <div class="col-lg-4" id="certificate-card2">
         <div class="card shadow" style="width: 18rem;">
           <img src="assets/documents/Certificate-INCO-Academy.png" class="card-img-top" alt="INCO-Academy">
-          <div class="card-body d-grid gap-2 justify-content-sm-center">
-            <h5 class="card-title fw-semibold">Mentoring</h5>
+          <div class="card-body d-grid  justify-content-sm-center">
+            <h5 class="card-title fw-semibold">Mentoring
+              <img src="assets/img/icons/icons8-new-32.png" alt="new-icon" width="24" height="24">
+            </h5>
             <p class="card-text">Mendapatkan sertifikat mentoring selama kursus IT Support dan sertifikat kursus tambahan Junior Web Programming dari Kitakerja (Yayasan Plan).</p>
             <a href="assets/documents/Certificate-INCO-Academy.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
@@ -155,9 +157,9 @@
       <div class="col-lg-4" id="certificate-card3">
         <div class="card shadow" style="width: 18rem;">
           <img src="assets/documents/Certificate_Menguasai-Fundamental-Front-End-Web_Seinki-1.png" class="card-img-top" alt="Frontend-Web-Development">
-          <div class="card-body d-grid gap-2 justify-content-sm-center">
+          <div class="card-body d-grid  justify-content-sm-center">
             <h5 class="card-title fw-semibold">Frontend Web Development</h5>
-            <p class="card-text pb-4">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
+            <p class="card-text pb-3">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
             <a href="assets/documents/Certificate_Menguasai-Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
         </div>
