Add Certificates pages

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h5 class="display-lg-2 fs-4 lh-1" id="hello">HI, I AM</h5>
+            <h5 class="display-lg-3 fs-4 lh-1" id="hello">HI, I AM</h5>
             <h1 class="col-lg-12 fw-bold lh-1 py-3" id="seinki">SEINKI ANNA LESMANA</h1>
             <p class="lead desk-singkat">Lulusan SMK Teknik Komputer Jaringan dan memiliki sertifikat IT Support dari Coursera serta memiliki sertifikat Web Development Frontend dari Coding Studio. Memiliki Kemampuan Networking, System Administration, IT Security, HTML, CSS, Javascript (Fundamental).</p>
             </p>
@@ -108,7 +108,7 @@
     <div class="container px-4 py-5">
         <h1 class="visually-hidden"></h1>
     <div class="px-4 py-5 my-5 text-center">
-      <h1 class="display-5 fw-semibold pb-2 border-bottom">About</h1>
+      <h1 class="display-6 fw-semibold pb-2 border-bottom">About</h1>
       <div class="col-lg-12 pt-lg-4 mx-auto">
         <p class="lead mb-4 text-about">
             Saya adalah seorang lulusan SMK Teknik Komputer Jaringan yang bersertifikat IT Support dari Coursera, dan sertifikat Web Development Frontend dari Coding Studio. Berdasarkan kompetensi yang saya miliki, saya yakin dapat berkontribusi di bidang IT.
@@ -132,7 +132,7 @@
 <section id="experience">
   <div class="container p-lg-5">
     <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-0">
-      <h1 class="display-5 fw-semibold pb-2 border-bottom text-center">Experience</h1>
+      <h1 class="display-6 fw-semibold pb-2 border-bottom text-center">Experience</h1>
       
       <!-- card 1 -->
       <div class="col-lg-6 pt-lg-5" id="card2">
@@ -186,7 +186,7 @@
   <div class="container p-lg-5">
     <!-- <div class="px-4 text-center">
     </div> -->
-    <h1 class="display-5 fw-semibold border-bottom pb-2 text-center">Certificates</h1>
+    <h1 class="display-6 fw-semibold border-bottom pb-2 text-center">Certificates</h1>
     <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-5 ps-4" id="row-card">
       <div class="col-lg-4" id="certificate-card1">
         <div class="card shadow" style="width: 18rem;">
@@ -200,24 +200,31 @@
       </div>
       <div class="col-lg-4" id="certificate-card2">
         <div class="card shadow" style="width: 18rem;">
-          <img src="assets/documents/Certificate-INCO-Academy.png" class="card-img-top" alt="INCO-Academy">
+          <img src="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="INCO-Academy">
           <div class="card-body d-grid  justify-content-sm-center">
-            <h5 class="card-title fw-semibold">Mentoring
+            <h5 class="card-title fw-semibold">Frontend Web Development
               <img src="assets/img/icons/icons8-new-32.png" alt="new-icon" width="24" height="24">
             </h5>
-            <p class="card-text">Mendapatkan sertifikat mentoring selama kursus IT Support dan sertifikat kursus tambahan Junior Web Programming dari Kitakerja (Yayasan Plan).</p>
-            <a href="assets/documents/Certificate-INCO-Academy.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+            <p class="card-text">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
+            <a href="assets/documents/Certificate-INCO-Amcademy.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4" id="certificate-card3">
         <div class="card shadow" style="width: 18rem;">
-          <img src="assets/documents/Certificate_Menguasai-Fundamental-Front-End-Web_Seinki-1.png" class="card-img-top" alt="Frontend-Web-Development">
+          <img src="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="Frontend-Web-Development">
           <div class="card-body d-grid  justify-content-sm-center">
             <h5 class="card-title fw-semibold">Frontend Web Development</h5>
             <p class="card-text pb-3">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
-            <a href="assets/documents/Certificate_Menguasai-Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+            <a href="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
+        </div>
+      </div>
+      <div class="col-lg-12" id="selengkapnya">
+        <div class="pb-lg-4 m-lg-4">
+          <a href="certificates.html">
+            <p class="text-lg-end">Selengkapnya</p>
+          </a>
         </div>
       </div>
     </div>
@@ -228,7 +235,7 @@
 <!-- features -->
 <section id="project">
     <div class="container px-4 py-5" id="custom-cards">
-        <h1 class="pb-2 border-bottom text-center fw-bold">My Projects</h1>
+        <h1 class="display-6 pb-2 border-bottom text-center fw-bold">My Projects</h1>
         <!-- project 1 -->
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
           <div class="col">
@@ -310,7 +317,7 @@
     <div class="container px-4 py-5">
         <div class="row pt-5 pb-5 d-flex justify-content-lg-center align-items-lg-center">
             <div class="border-bottom text-center">
-                <h1 class="fw-bold">Contact Me</h1>
+                <h1 class="display-6 fw-bold">Contact Me</h1>
             </div>
             <div class="col-lg-6">
                 <form class="pt-lg-5">
