--- a/certificates.html
+++ b/certificates.html
@@ -18,7 +18,7 @@
         <div class="container p-auto">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <!-- <span class="span-navbar"> -->
-              <a href="#home" class="navbar-brand d-flex align-items-center my-2 my-lg-0 me-lg-auto fs-3 fw-bold text-white text-decoration-none" id="div-img-nav-text">
+              <a href="index.html" class="navbar-brand d-flex align-items-center my-2 my-lg-0 me-lg-auto fs-3 fw-bold text-white text-decoration-none" id="div-img-nav-text">
                 <img src="assets/img/logo/seinki-AL-system-dark-logo-rmv-bg.png" alt="seinki-logo" width="150" height="50" class="img-navbar" id="img-navbar1">
                   <!-- <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg> -->
                   <!-- Seinki A.L -->
@@ -88,41 +88,34 @@
       <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-5 ps-4" id="row-card">
         <div class="col-lg-4" id="certificate-card1">
           <div class="card shadow" style="width: 18rem;">
-            <img src="assets/documents/Coursera-IT-Support-Certificate.png" class="card-img-top" alt="IT-Support">
+            <img src="assets/documents/ID-Networkers/Seinki-Anna-Lesmana-Jaringan-Dasar-Sertifikat-Jaringan-Komputer-Dasar-LMS-ID-Networkers_page-0001.jpg" class="card-img-top" alt="Jaringan-Komputer-Dasar">
             <div class="card-body d-grid gap-2 justify-content-sm-center">
-              <h5 class="card-title fw-semibold">IT Support</h5>
-              <p class="card-text text-card">Mendapatkan sertifikat IT Support dari Coursera yang diselenggarakan oleh Yayasan Plan, INCO Acamedy Work In Tech, Rubicweb, & Google.org.</p>
-              <a href="assets/documents/Coursera-IT-Support-Certificate.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+              <h5 class="card-title fw-semibold">Jaringan Komputer Dasar</h5>
+              <p class="card-text text-card">Mendapatkan sertifikat Jaringan Komputer Jaringan dari ID-Networkers.</p>
+              <a href="assets/documents/ID-Networkers/Seinki-Anna-Lesmana-Jaringan-Dasar-Sertifikat-Jaringan-Komputer-Dasar-LMS-ID-Networkers.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4" id="certificate-card2">
           <div class="card shadow" style="width: 18rem;">
-            <img src="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="INCO-Academy">
+            <img src="assets/documents/ID-Networkers/Seinki-Anna-Lesmana-Cisco-Dasar-Sertifikat-Cisco-Dasar-LMS-ID-Networkers (1)_page-0001.jpg" class="card-img-top" alt="Cisco-Dasar">
             <div class="card-body d-grid  justify-content-sm-center">
-              <h5 class="card-title fw-semibold">Frontend Web Development
-                <img src="assets/img/icons/icons8-new-32.png" alt="new-icon" width="24" height="24">
+              <h5 class="card-title fw-semibold">Cisco Dasar
+                <!-- <img src="assets/img/icons/icons8-new-32.png" alt="new-icon" width="24" height="24"> -->
               </h5>
-              <p class="card-text">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
-              <a href="assets/documents/Certificate-INCO-Amcademy.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+              <p class="card-text">Mendapatkan sertifikat Cisco Dasar dari ID-Networkers.</p>
+              <a href="assets/documents/ID-Networkers/Seinki-Anna-Lesmana-Cisco-Dasar-Sertifikat-Cisco-Dasar-LMS-ID-Networkers (1).pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4" id="certificate-card3">
           <div class="card shadow" style="width: 18rem;">
-            <img src="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="Frontend-Web-Development">
+            <img src="assets/documents/Java-LinkedIn/Sertifikat Penyelesaian Belajar tentang Java_page-0001.jpg" class="card-img-top" alt="Frontend-Web-Development">
             <div class="card-body d-grid  justify-content-sm-center">
-              <h5 class="card-title fw-semibold">Frontend Web Development</h5>
-              <p class="card-text pb-3">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
-              <a href="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+              <h5 class="card-title fw-semibold">Belajar Tentang Java</h5>
+              <p class="card-text pb-3">Mendapatkan sertifikat penyelesaian Belajar Tentang Java di LinkedIn Learning.</p>
+              <a href="assets/documents/Java-LinkedIn/Sertifikat Penyelesaian Belajar tentang Java.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-12" id="selengkapnya">
-          <div class="pb-lg-4 m-lg-4">
-            <a href="certificates.html">
-              <p class="text-lg-end">Selengkapnya</p>
-            </a>
           </div>
         </div>
       </div>
