--- a/index.html
+++ b/index.html
@@ -190,33 +190,33 @@
     <div class="row d-flex justify-content-center align-items-center pb-lg-5 pt-lg-5 ps-4" id="row-card">
       <div class="col-lg-4" id="certificate-card1">
         <div class="card shadow" style="width: 18rem;">
-          <img src="assets/documents/Coursera-IT-Support-Certificate.png" class="card-img-top" alt="IT-Support">
+          <img src="assets/documents/ITSupport/Coursera-IT-Support-Certificate.png" class="card-img-top" alt="IT-Support">
           <div class="card-body d-grid gap-2 justify-content-sm-center">
             <h5 class="card-title fw-semibold">IT Support</h5>
             <p class="card-text text-card">Mendapatkan sertifikat IT Support dari Coursera yang diselenggarakan oleh Yayasan Plan, INCO Acamedy Work In Tech, Rubicweb, & Google.org.</p>
-            <a href="assets/documents/Coursera-IT-Support-Certificate.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+            <a href="assets/documents/ITSupport/Coursera-IT-Support-Certificate.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4" id="certificate-card2">
         <div class="card shadow" style="width: 18rem;">
-          <img src="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="INCO-Academy">
+          <img src="assets/documents/FundFrontEndWeb/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="INCO-Academy">
           <div class="card-body d-grid  justify-content-sm-center">
             <h5 class="card-title fw-semibold">Frontend Web Development
               <img src="assets/img/icons/icons8-new-32.png" alt="new-icon" width="24" height="24">
             </h5>
             <p class="card-text">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
-            <a href="assets/documents/Certificate-INCO-Amcademy.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+            <a href="assets/documents/FundFrontEndWeb/Certificate_Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4" id="certificate-card3">
-        <div class="card shadow" style="width: 18rem;">
-          <img src="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki_page-0001.jpg" class="card-img-top" alt="Frontend-Web-Development">
+        <div class="card shadow pt-5" style="width: 18rem;">
+          <img src="assets/documents/MSExcel/Sertifikat-MS-Excel-MySkill_page-0001.jpg" class="card-img-top pb-5" alt="Microsoft-Excel">
           <div class="card-body d-grid  justify-content-sm-center">
-            <h5 class="card-title fw-semibold">Frontend Web Development</h5>
-            <p class="card-text pb-3">Mendapatkan sertifikat Fundamental Frontend Web Development dari Coding Studio.</p>
-            <a href="assets/documents/Certificate_Fundamental-Front-End-Web_Seinki.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
+            <h5 class="card-title fw-semibold">Microsoft Excel</h5>
+            <p class="card-text pb-3 mb-5">Mendapatkan sertifikat Microsoft Excel dari MySkill.</p>
+            <a href="assets/documents/MSExcel/Sertifikat-MS-Excel-MySkill.pdf" target="_blank" class="btn btn-outline-secondary rounded-pill shadow">Lihat Sertifikat</a>
           </div>
         </div>
       </div>
